ZFIN-9746: Improve formatting for ncbi load reports